===========
pyprototypr
===========


Changes
=======

2016-02-05 (0.1.0a6)
--------------------
* First draft!

2023-02-04 (0.1.2a1)
--------------------
* Upgrade to Python 3.11
* Patch code for changes related to Python and library upgrades
* Switch to using bgg-api library
* Improve examples