@@ -2,7 +2,6 @@
 pyprototypr
 ===========
 
-
 Changes
 =======
 
@@ -16,3 +15,10 @@ Changes
 * Patch code for changes related to Python and library upgrades
 * Switch to using bgg-api library
 * Improve examples
+
+2023-04-09 (0.1.3a1)
+--------------------
+* Add more shapes
+* Refactor draw() method
+* Improve examples
+* Add documentation
